--- a/pom.xml
+++ b/pom.xml
@@ -2,10 +2,10 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.edu.abhi.rest</groupId>
-	<artifactId>RESTFullWS</artifactId>
+	<artifactId>RESTFulWS</artifactId>
 	<packaging>war</packaging>
 	<version>1.0-SNAPSHOT</version>
-	<name>RESTFullWS Maven Webapp</name>
+	<name>RESTFulWS Maven Webapp</name>
 	<url>http://maven.apache.org</url>
 	<repositories>
 		<repository>
@@ -29,11 +29,16 @@
 		<dependency>
 			<groupId>com.sun.jersey</groupId>
 			<artifactId>jersey-bundle</artifactId>
-			<version>1.18</version>
+			<version>1.8</version>
 		</dependency>
 		<dependency>
 			<groupId>com.sun.jersey</groupId>
 			<artifactId>jersey-json</artifactId>
+			<version>1.8</version>
+		</dependency>
+		<dependency>
+			<groupId>com.sun.jersey.contribs</groupId>
+			<artifactId>jersey-multipart</artifactId>
 			<version>1.8</version>
 		</dependency>
 		<dependency>
@@ -43,6 +48,6 @@
 		</dependency>
 	</dependencies>
 	<build>
-		<finalName>RESTFullWS</finalName>
+		<finalName>RESTFulWS</finalName>
 	</build>
 </project>
