Filter and More

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -10,12 +10,22 @@
 	<servlet>
 		<servlet-name>jersey-servlet</servlet-name>
 		<servlet-class>
-			com.sun.jersey.spi.container.servlet.ServletContainer
+			org.glassfish.jersey.servlet.ServletContainer
 		</servlet-class>
 		<init-param>
-			<param-name>com.sun.jersey.config.property.packages</param-name>
+			<param-name>jersey.config.server.provider.packages</param-name>
 			<param-value>com.edu.abhi.rest</param-value>
 		</init-param>
+		<init-param>
+			<param-name>jersey.config.server.provider.classnames</param-name>
+			<param-value>org.glassfish.jersey.filter.LoggingFilter;org.glassfish.jersey.media.multipart.MultiPartFeature;org.glassfish.jersey.jackson.JacksonFeature</param-value>
+		</init-param>
+		<!-- <init-param>
+            <param-name>jersey.config.server.provider.packages</param-name>
+            <param-value>
+                org.codehaus.jackson.jaxrs      
+            </param-value>
+        </init-param> -->
 		<load-on-startup>1</load-on-startup>
 	</servlet>
 	<servlet-mapping>
